--- a/src/MoneyManager.Web/Pages/RecurringTransactions.razor
+++ b/src/MoneyManager.Web/Pages/RecurringTransactions.razor
@@ -1,4 +1,4 @@
-﻿@page "/recurring-transactions"
+@page "/recurring-transactions"
 @using MoneyManager.Domain.Entities
 @using MoneyManager.Domain.Enums
 @using MoneyManager.Application.DTOs.Request
